# sledge

./: .gitignore  Dockerfile  Dockerfile-Host  Dockerfile-Room  README.md  docker-compose-dummy.yml  docker-compose-host.yml  docker-compose-room.yml  docker-compose-standalone.yml  docker-compose.yml  go.mod  go.sum  nginx.conf  start.sh  start_host.sh  start_server.bat
.github/workflows/: linuxcompile.yaml
client/: app.js  assets.js  base.css  blocks.js  bytereader.js  connection.js  constants.js  helpers.js  index.html  joystick.js  menu.js  server-connection.js  tailwind.config.js  ui.js
client/assets/: avatar_crown.png~  fullscrbtn.png~
includes/: linmath.h
libs/glfw/debug/: glfw3.lib
server/: CMakeLists.txt
server/data/levels/: castle_level.json  countdown_level.json  fd_level.json  hockey.json  island_level.json
server/data/weapons/: wpn_flail.json  wpn_sledge.json  wpn_sword.json
server/includes/websocketpp/common/: connection_hdl.hpp
server/libs/box2d/Debug/: box2d.lib
server/libs/box2d/Release/: box2d.lib
server/libs/glfw/release/: glfw3.lib
server/src/: Asset.cpp  Asset.h  Avatar.cpp  Avatar.h  B2Filters.h  B2Manager.cpp  B2Manager.h  ConnectionManager.cpp  ConnectionManager.h  ContactListener.h  Debugger.cpp  Debugger.h  FPSCounter.cpp  FPSCounter.h  GameManager.cpp  GameManager.h  GameMode.cpp  GameMode.h  GameModeBrawl.cpp  GameModeBrawl.h  GameModeSandbox.cpp  GameModeSandbox.h  GameModeTeamBrawl.cpp  GameModeTeamBrawl.h  GameSettings.h  IGameMode.h  Level.cpp  Level.h  LevelAsset.cpp  LevelAsset.h  LevelBlock.cpp  LevelBlock.h  LevelLoader.cpp  LevelLoader.h  LevelManager.cpp  LevelManager.h  Packet.cpp  Packet.h  Player.cpp  Player.h  (+14 more)
serverhost/: helpers.go  main.go  roomManager.go
src/: Avatar.cpp  B2Manager.cpp  B2Manager.h  Debugger.cpp  Debugger.h  LevelLoader.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Sledge.cpp  Sledge.h  Sword.cpp  Sword.h  Weapon.cpp  Weapon.h  main.cpp  sledge.sln  sledge.vcxproj  sledge.vcxproj.filters
